{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 2546,
  "lineage": "d3a930db-67a9-6b62-8b34-ae2d4752278e",
  "resources": [
    {
      "module": "module.ec2.module.private_ec2_vpcA",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:211125294364:instance/i-0418331dd0afd5f0d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0418331dd0afd5f0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trinhdat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b9890d20eb34ac1",
            "private_dns": "ip-10-0-0-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-029dc78b54f3a5b92",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c15d88b6133ee38",
            "tags": {
              "Name": "private_ec2_vpcA",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Name": "private_ec2_vpcA",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "private_ec2_vpcA"
            },
            "vpc_security_group_ids": [
              "sg-095feb06810507563"
            ]
          },
          "dependencies": [
            "module.ec2.module.private_ec2_vpcA.aws_iam_instance_profile.this",
            "module.ec2.module.private_ec2_vpcA.aws_iam_role.this",
            "module.ec2.module.private_ec2_vpcA.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.private_ec2_vpcA.data.aws_partition.current",
            "module.ec2.module.private_ec2_vpcA.data.aws_ssm_parameter.this",
            "module.security_group.aws_security_group.service_one_vpcA",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_subnet.private",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.private_ec2_vpcB",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:211125294364:instance/i-07bd5317282250965",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bd5317282250965",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trinhdat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a1098ad1a666274b",
            "private_dns": "ip-10-1-0-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0858d85819e97e1ec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e890f57ad177962d",
            "tags": {
              "Name": "private_ec2_vpcB",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Name": "private_ec2_vpcB",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "private_ec2_vpcB"
            },
            "vpc_security_group_ids": [
              "sg-09648cb0db37d3816"
            ]
          },
          "dependencies": [
            "module.ec2.module.private_ec2_vpcB.aws_iam_instance_profile.this",
            "module.ec2.module.private_ec2_vpcB.aws_iam_role.this",
            "module.ec2.module.private_ec2_vpcB.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.private_ec2_vpcB.data.aws_partition.current",
            "module.ec2.module.private_ec2_vpcB.data.aws_ssm_parameter.this",
            "module.security_group.aws_security_group.service_one_vpcB",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_subnet.private",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.public_ec2_vpcA",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:211125294364:instance/i-0e5e03f3fb7786788",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5e03f3fb7786788",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trinhdat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006456c3e2bf741e7",
            "private_dns": "ip-10-0-4-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.5",
            "public_dns": "ec2-54-196-95-142.compute-1.amazonaws.com",
            "public_ip": "54.196.95.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7f67a5ae6cfa96a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d8f523357a8db7c",
            "tags": {
              "Name": "public_ec2_vpcA",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Name": "public_ec2_vpcA",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "public_ec2_vpcA"
            },
            "vpc_security_group_ids": [
              "sg-095feb06810507563"
            ]
          },
          "dependencies": [
            "module.ec2.module.public_ec2_vpcA.aws_iam_instance_profile.this",
            "module.ec2.module.public_ec2_vpcA.aws_iam_role.this",
            "module.ec2.module.public_ec2_vpcA.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.public_ec2_vpcA.data.aws_partition.current",
            "module.ec2.module.public_ec2_vpcA.data.aws_ssm_parameter.this",
            "module.security_group.aws_security_group.service_one_vpcA",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_subnet.public",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.public_ec2_vpcB",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:211125294364:instance/i-00749902e31b7b0ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00749902e31b7b0ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "trinhdat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af9f447da70be405",
            "private_dns": "ip-10-1-4-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.4.153",
            "public_dns": "ec2-3-87-118-198.compute-1.amazonaws.com",
            "public_ip": "3.87.118.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03922c28f84d96459",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eff6099c9c1ef0d5",
            "tags": {
              "Name": "public_ec2_vpcB",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Name": "public_ec2_vpcB",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "public_ec2_vpcB"
            },
            "vpc_security_group_ids": [
              "sg-09648cb0db37d3816"
            ]
          },
          "dependencies": [
            "module.ec2.module.public_ec2_vpcB.aws_iam_instance_profile.this",
            "module.ec2.module.public_ec2_vpcB.aws_iam_role.this",
            "module.ec2.module.public_ec2_vpcB.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.public_ec2_vpcB.data.aws_partition.current",
            "module.ec2.module.public_ec2_vpcB.data.aws_ssm_parameter.this",
            "module.security_group.aws_security_group.service_one_vpcB",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_subnet.public",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpcA",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:security-group/sg-02c4d96dfbdc0289c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-02c4d96dfbdc0289c",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpcB",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:security-group/sg-07eaac08970068511",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-07eaac08970068511",
            "name": "default",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:vpc/vpc-05e6a16189e084b39",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01c3344ea72df565b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-011d8cdf0a5aefa8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e6a16189e084b39",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bcb27410c212d46d",
            "owner_id": "211125294364"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_one_vpcA",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:security-group/sg-095feb06810507563",
            "description": "Allow access from service two",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095feb06810507563",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "service_one_vpcA",
            "name_prefix": "",
            "owner_id": "211125294364",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_one_vpcB",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:security-group/sg-09648cb0db37d3816",
            "description": "Allow access from service two",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09648cb0db37d3816",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "service_one_vpcB",
            "name_prefix": "",
            "owner_id": "211125294364",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_two_vpcA",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:security-group/sg-056d2c7161873f0cd",
            "description": "Allow access from service one",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056d2c7161873f0cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "service_two_vpcA",
            "name_prefix": "",
            "owner_id": "211125294364",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_two_vpcB",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:security-group/sg-0d658171fdb5b1fba",
            "description": "Allow access from service one",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d658171fdb5b1fba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "service_two_vpcB",
            "name_prefix": "",
            "owner_id": "211125294364",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.sg_vpcA",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.sg_vpcA",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.sg_vpcA",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service two",
            "from_port": 80,
            "id": "sgrule-3721234837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095feb06810507563",
            "security_group_rule_id": "sgr-068ddb5464941028f",
            "self": false,
            "source_security_group_id": "sg-056d2c7161873f0cd",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.service_one_vpcA",
            "module.security_group.aws_security_group.service_two_vpcA",
            "module.security_group.module.sg_vpcA.aws_security_group.this",
            "module.security_group.module.sg_vpcA.aws_security_group.this_name_prefix",
            "module.vpc.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.sg_vpcB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.sg_vpcB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.sg_vpcB",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service one",
            "from_port": 80,
            "id": "sgrule-1388334838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09648cb0db37d3816",
            "security_group_rule_id": "sgr-07b81a65958634485",
            "self": false,
            "source_security_group_id": "sg-0d658171fdb5b1fba",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.service_one_vpcB",
            "module.security_group.aws_security_group.service_two_vpcB",
            "module.security_group.module.sg_vpcB.aws_security_group.this",
            "module.security_group.module.sg_vpcB.aws_security_group.this_name_prefix",
            "module.vpc.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway.module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:211125294364:transit-gateway/tgw-07200c61313e8fa13",
            "association_default_route_table_id": "tgw-rtb-0c206cf0e9d5b0427",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "My TGW shared with several other AWS accounts",
            "dns_support": "enable",
            "id": "tgw-07200c61313e8fa13",
            "multicast_support": "disable",
            "owner_id": "211125294364",
            "propagation_default_route_table_id": "tgw-rtb-0c206cf0e9d5b0427",
            "security_group_referencing_support": "disable",
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway"
            },
            "timeouts": {
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit_gateway.module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "this",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.1.0.0/16",
            "id": "tgw-rtb-094291bb9290579c4_10.1.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-03950c23d0b72c228",
            "transit_gateway_route_table_id": "tgw-rtb-094291bb9290579c4"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_subnet.private",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpcB.aws_subnet.private",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.0.0.0/16",
            "id": "tgw-rtb-094291bb9290579c4_10.0.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-00f2267fb21a5a8c3",
            "transit_gateway_route_table_id": "tgw-rtb-094291bb9290579c4"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_subnet.private",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpcB.aws_subnet.private",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway.module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "this",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:transit-gateway-route-table/tgw-rtb-094291bb9290579c4",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-094291bb9290579c4",
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway"
            },
            "transit_gateway_id": "tgw-07200c61313e8fa13"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway.module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpcA",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-03950c23d0b72c228",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-04c15d88b6133ee38",
              "subnet-09a411065d902011e"
            ],
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpcA"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpcA"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-07200c61313e8fa13",
            "vpc_id": "vpc-0c54770c3a3d36be3",
            "vpc_owner_id": "211125294364"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_subnet.private",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpcB.aws_subnet.private",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "vpcB",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-00f2267fb21a5a8c3",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0834dfc0993a51890",
              "subnet-0e890f57ad177962d"
            ],
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpcB"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpcB"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-07200c61313e8fa13",
            "vpc_id": "vpc-0cbf1f3b8b3c4a136",
            "vpc_owner_id": "211125294364"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_subnet.private",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpcB.aws_subnet.private",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcA_to_vpcB",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a43687cdc974bd5f3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a43687cdc974bd5f",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-07200c61313e8fa13",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_route_table.private",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcB_to_vpcA",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05bc8b0e7aba91729179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05bc8b0e7aba91729",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-07200c61313e8fa13",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_route_table.private",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:network-acl/acl-0c56f0546d3870376",
            "default_network_acl_id": "acl-0c56f0546d3870376",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c56f0546d3870376",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125294364",
            "subnet_ids": [
              "subnet-01d8f523357a8db7c",
              "subnet-04c15d88b6133ee38",
              "subnet-08701c9d3ba64d59e",
              "subnet-09a411065d902011e"
            ],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-default"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-default"
            },
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:route-table/rtb-08cc76a0316f5dfd1",
            "default_route_table_id": "rtb-08cc76a0316f5dfd1",
            "id": "rtb-08cc76a0316f5dfd1",
            "owner_id": "211125294364",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-default"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:security-group/sg-02c4d96dfbdc0289c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02c4d96dfbdc0289c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211125294364",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-default"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-default"
            },
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ac09d3b176ac850",
            "arn": "arn:aws:ec2:us-east-1:211125294364:elastic-ip/eipalloc-03ac09d3b176ac850",
            "domain": "vpc",
            "id": "eipalloc-03ac09d3b176ac850",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-145-102-16.compute-1.amazonaws.com",
            "public_ip": "54.145.102.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-us-east-1a"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_internet_gateway.this",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:internet-gateway/igw-0e8c42d4e4f18eb98",
            "id": "igw-0e8c42d4e4f18eb98",
            "owner_id": "211125294364",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA"
            },
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ac09d3b176ac850",
            "association_id": "eipassoc-0eb94ba288007c37d",
            "connectivity_type": "public",
            "id": "nat-0a972d4dbaa97a8ed",
            "network_interface_id": "eni-084fc0c8501052ee4",
            "private_ip": "10.0.4.132",
            "public_ip": "54.145.102.16",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d8f523357a8db7c",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-us-east-1a"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_eip.nat",
            "module.vpc.module.vpcA.aws_internet_gateway.this",
            "module.vpc.module.vpcA.aws_subnet.public",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a43687cdc974bd5f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a972d4dbaa97a8ed",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a43687cdc974bd5f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_eip.nat",
            "module.vpc.module.vpcA.aws_internet_gateway.this",
            "module.vpc.module.vpcA.aws_nat_gateway.this",
            "module.vpc.module.vpcA.aws_route_table.private",
            "module.vpc.module.vpcA.aws_subnet.public",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e8c42d4e4f18eb98",
            "id": "r-rtb-01379a44dac5498d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01379a44dac5498d3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_internet_gateway.this",
            "module.vpc.module.vpcA.aws_route_table.public",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:route-table/rtb-0a43687cdc974bd5f",
            "id": "rtb-0a43687cdc974bd5f",
            "owner_id": "211125294364",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-private"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:route-table/rtb-01379a44dac5498d3",
            "id": "rtb-01379a44dac5498d3",
            "owner_id": "211125294364",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-public"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd88d6ccc4b9c4d",
            "route_table_id": "rtb-0a43687cdc974bd5f",
            "subnet_id": "subnet-04c15d88b6133ee38"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_route_table.private",
            "module.vpc.module.vpcA.aws_subnet.private",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c161ab27f65c2f7",
            "route_table_id": "rtb-0a43687cdc974bd5f",
            "subnet_id": "subnet-09a411065d902011e"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_route_table.private",
            "module.vpc.module.vpcA.aws_subnet.private",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05667a21ad6c941ff",
            "route_table_id": "rtb-01379a44dac5498d3",
            "subnet_id": "subnet-01d8f523357a8db7c"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_route_table.public",
            "module.vpc.module.vpcA.aws_subnet.public",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f72244a4d6da51e6",
            "route_table_id": "rtb-01379a44dac5498d3",
            "subnet_id": "subnet-08701c9d3ba64d59e"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_route_table.public",
            "module.vpc.module.vpcA.aws_subnet.public",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:subnet/subnet-04c15d88b6133ee38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c15d88b6133ee38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125294364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-private-us-east-1a"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-private-us-east-1a"
            },
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:subnet/subnet-09a411065d902011e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a411065d902011e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125294364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-private-us-east-1b"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-private-us-east-1b"
            },
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:subnet/subnet-01d8f523357a8db7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d8f523357a8db7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125294364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-public-us-east-1a"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-public-us-east-1a"
            },
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:subnet/subnet-08701c9d3ba64d59e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08701c9d3ba64d59e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125294364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-public-us-east-1b"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA-public-us-east-1b"
            },
            "vpc_id": "vpc-0c54770c3a3d36be3"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcA.aws_vpc.this",
            "module.vpc.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcA",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:vpc/vpc-0c54770c3a3d36be3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c56f0546d3870376",
            "default_route_table_id": "rtb-08cc76a0316f5dfd1",
            "default_security_group_id": "sg-02c4d96dfbdc0289c",
            "dhcp_options_id": "dopt-011d8cdf0a5aefa8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c54770c3a3d36be3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08cc76a0316f5dfd1",
            "owner_id": "211125294364",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcA"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:network-acl/acl-085a67d3de75a0bf6",
            "default_network_acl_id": "acl-085a67d3de75a0bf6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-085a67d3de75a0bf6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125294364",
            "subnet_ids": [
              "subnet-0834dfc0993a51890",
              "subnet-0e890f57ad177962d"
            ],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-default"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-default"
            },
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:route-table/rtb-010244fda565464bd",
            "default_route_table_id": "rtb-010244fda565464bd",
            "id": "rtb-010244fda565464bd",
            "owner_id": "211125294364",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-default"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:security-group/sg-07eaac08970068511",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07eaac08970068511",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211125294364",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-default"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-default"
            },
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02deffe3fa4d9d223",
            "arn": "arn:aws:ec2:us-east-1:211125294364:elastic-ip/eipalloc-02deffe3fa4d9d223",
            "domain": "vpc",
            "id": "eipalloc-02deffe3fa4d9d223",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-5-172-11.compute-1.amazonaws.com",
            "public_ip": "52.5.172.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-us-east-1a"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_internet_gateway.this",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:internet-gateway/igw-079aabeec849981e8",
            "id": "igw-079aabeec849981e8",
            "owner_id": "211125294364",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB"
            },
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02deffe3fa4d9d223",
            "association_id": "eipassoc-00a7a7ef3780c17cc",
            "connectivity_type": "public",
            "id": "nat-033464dadfca59766",
            "network_interface_id": "eni-0f5858b1144642ed8",
            "private_ip": "10.1.4.129",
            "public_ip": "52.5.172.11",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eff6099c9c1ef0d5",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-us-east-1a"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_eip.nat",
            "module.vpc.module.vpcB.aws_internet_gateway.this",
            "module.vpc.module.vpcB.aws_subnet.public",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05bc8b0e7aba917291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-033464dadfca59766",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05bc8b0e7aba91729",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_eip.nat",
            "module.vpc.module.vpcB.aws_internet_gateway.this",
            "module.vpc.module.vpcB.aws_nat_gateway.this",
            "module.vpc.module.vpcB.aws_route_table.private",
            "module.vpc.module.vpcB.aws_subnet.public",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-079aabeec849981e8",
            "id": "r-rtb-0ecaf21f27de04acd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecaf21f27de04acd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_internet_gateway.this",
            "module.vpc.module.vpcB.aws_route_table.public",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:route-table/rtb-05bc8b0e7aba91729",
            "id": "rtb-05bc8b0e7aba91729",
            "owner_id": "211125294364",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-private"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:route-table/rtb-0ecaf21f27de04acd",
            "id": "rtb-0ecaf21f27de04acd",
            "owner_id": "211125294364",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-public"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04baacabce9537b1b",
            "route_table_id": "rtb-05bc8b0e7aba91729",
            "subnet_id": "subnet-0e890f57ad177962d"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_route_table.private",
            "module.vpc.module.vpcB.aws_subnet.private",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c280258874eae407",
            "route_table_id": "rtb-05bc8b0e7aba91729",
            "subnet_id": "subnet-0834dfc0993a51890"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_route_table.private",
            "module.vpc.module.vpcB.aws_subnet.private",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0044c09955a6ab300",
            "route_table_id": "rtb-0ecaf21f27de04acd",
            "subnet_id": "subnet-0eff6099c9c1ef0d5"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_route_table.public",
            "module.vpc.module.vpcB.aws_subnet.public",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f21bfbb4f94d8b96",
            "route_table_id": "rtb-0ecaf21f27de04acd",
            "subnet_id": "subnet-0ea89b0022d29bf46"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_route_table.public",
            "module.vpc.module.vpcB.aws_subnet.public",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:subnet/subnet-0e890f57ad177962d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e890f57ad177962d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125294364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-private-us-east-1a"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-private-us-east-1a"
            },
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:subnet/subnet-0834dfc0993a51890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0834dfc0993a51890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125294364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-private-us-east-1b"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-private-us-east-1b"
            },
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:subnet/subnet-0eff6099c9c1ef0d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eff6099c9c1ef0d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125294364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-public-us-east-1a"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-public-us-east-1a"
            },
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:subnet/subnet-0ea89b0022d29bf46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea89b0022d29bf46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125294364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-public-us-east-1b"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB-public-us-east-1b"
            },
            "vpc_id": "vpc-0cbf1f3b8b3c4a136"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpcB.aws_vpc.this",
            "module.vpc.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpcB",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125294364:vpc/vpc-0cbf1f3b8b3c4a136",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-085a67d3de75a0bf6",
            "default_route_table_id": "rtb-010244fda565464bd",
            "default_security_group_id": "sg-07eaac08970068511",
            "dhcp_options_id": "dopt-011d8cdf0a5aefa8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbf1f3b8b3c4a136",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010244fda565464bd",
            "owner_id": "211125294364",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpcB"
            }
          }
        }
      ]
    }
  ]
}